<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Paly List Layout -->

    <string name="app_name">compDuctor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a text to send</string>
    <string name="button_send">Send</string>
    <string name="button_sycronize">Sycronize</string>
    <string name="button_find_device">Connect</string>
    <string name="button_visible">Visible</string>
    <string name="button_play_list">Play List</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_unpaired_devices">Unpaired Devices</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_bluetooth_service">BluetoothService</string>
    <string name="button_scan">Scan Device</string>
    <string name="receive_message">waiting</string>
    <string name="title_activity_play_list">PlayListActivity</string>
    

    <!-- Paly List Layout -->
    <string name="title_activity_add_song">AddSongActivity</string>
    <string name="play_list_button_add">Add Song</string>
	<string name="play_list_button_back">Back Main</string>
	<string name="play_list_button_clear">Clear Library</string>
	<string name="play_list_button_refresh">Refresh</string>
    
     <!-- Add Song Layout -->
     <string name="add_song_input_song_dir">Please input Directory</string>
     <string name="add_song_input_song_name">Please input Song Name</string>
     <string name="add_song_button_add">Add</string>
     
</resources>
