<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/add_song_input_song_dir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/add_song_input_song_dir" />

        <EditText
            android:id="@+id/add_song_input_song_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/add_song_input_song_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_song_button_add"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/add_song_button_add"
            android:onClick="addSong" />

    </LinearLayout>
   
</LinearLayout>
